// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> BackgroundFillColor story renders snapshot 1`] = `
<section
  class="css-dh5ges"
  data-testid="hero"
  height="400px"
>
  <div
    class="css-7dmny"
  >
    <h1
      class="css-dkfd5g"
    >
      Hero with Color Background
    </h1>
    <p
      class="css-wzifq3"
    >
      This hero uses a color background fill instead of the default background color.
    </p>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;

exports[`<Hero /> BackgroundFillImage story renders snapshot 1`] = `
<section
  class="css-1r31xwp"
  data-testid="hero"
  height="500px"
>
  <div
    class="css-7dmny"
  >
    <h1
      class="css-dkfd5g"
    >
      Hero with Image Background
    </h1>
    <p
      class="css-wzifq3"
    >
      This hero uses an image background that stretches to cover the entire component.
    </p>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;

exports[`<Hero /> Default story renders snapshot 1`] = `
<section
  class="css-1pjlwce"
  data-testid="hero"
>
  <div
    class="css-7dmny"
  >
    <h1
      class="css-dkfd5g"
    >
      Header Text
    </h1>
    <p
      class="css-wzifq3"
    >
      Caption text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
    </p>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;

exports[`<Hero /> NoContainerMargins story renders snapshot 1`] = `
<section
  class="css-y8l1m5"
  data-testid="hero"
>
  <div
    class="css-7dmny"
  >
    <h1
      class="css-dkfd5g"
    >
      Full Width Hero
    </h1>
    <p
      class="css-wzifq3"
    >
      This hero extends to the full width without container margins.
    </p>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;

exports[`<Hero /> SmallWidth story renders snapshot 1`] = `
<section
  class="css-1pjlwce"
  data-testid="hero"
>
  <div
    class="css-1ppzpm2"
  >
    <h1
      class="css-dkfd5g"
    >
      Compact Hero
    </h1>
    <p
      class="css-wzifq3"
    >
      A more compact hero design for focused layouts.
    </p>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;

exports[`<Hero /> WithoutCaption story renders snapshot 1`] = `
<section
  class="css-1pjlwce"
  data-testid="hero"
>
  <div
    class="css-7dmny"
  >
    <h1
      class="css-dkfd5g"
    >
      Header Text Only
    </h1>
    <div
      class="css-133yqvh"
    >
      <div
        class="css-tqgscj"
      >
        Content area (placeholder)
      </div>
    </div>
  </div>
</section>
`;
